<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <POU Name="FB_CASE_DuplicatCheckTests" Id="{48ce7775-a9a4-40d8-ace0-2620e784a3e8}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_CASE_DuplicatCheckTests EXTENDS TcUnit.FB_TestSuite

VAR
	
	(* In/Out test*)
	stProductInstruction_01					: ST_PCM_Status;
	stPackCodesDuplicated_01				: ST_RejectItems;
	stOuterBarcodeDuplicate_01				: ST_RejectItems;
	stOuterDuplicatedPackCodesFound_01		: ST_RejectItems;
	stCaseRejectReasons_01					: ST_RejectReasonsForCase;		
	stRejectReasonForOuters_01				: ST_RejectReasonsForOuter;	
	stRejectReasonForPacks_01				: ST_RejectReasonsForPack;	
	
	stCACData_01 							: ST_CAC_Data;
	
	stUpdateCACData_01						: ST_CAC_Data;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[//==============================================================
//MAIN TESTS
//==============================================================

main01_bIsDuplicateOuterTRUEonOuterBarcodeDuplicate();
main02_bIsDuplicatePackTRUEonPackBarcodeDuplicate();
main03_OuterRejectIDChangedWhenOuterDuplicate();
]]></ST>
    </Implementation>
    <Folder Name="Main" Id="{90804e8b-9724-4b91-a81d-e1b2ab2e1846}" />
    <Method Name="main01_bIsDuplicateOuterTRUEonOuterBarcodeDuplicate" Id="{da094c5b-b96c-4f61-928e-83b515b4b561}" FolderPath="Main\">
      <Declaration><![CDATA[METHOD INTERNAL main01_bIsDuplicateOuterTRUEonOuterBarcodeDuplicate
VAR
	fbCase					: FB_CASE_DuplicatCheck;
	bIsDuplicateOuter		: BOOL;
	bIsDuplicatePacks		: BOOL;
	

	
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[
//Data initialization
TestInit(stCACData:= stCACData_01, stProductInstruction:= stProductInstruction_01);

//Change some data for test scenario below
stCACData_01.Outer[9].Barcode := stCACData_01.Outer[15].Barcode;

	
TcUnit.TEST('main01_bIsDuplicateOuterTRUEonOuterBarcodeDuplicate');

fbCase(
	bExecute:= TRUE, 
	stProductInstruction:= stProductInstruction_01, 
	stPackCodesDuplicated:= stPackCodesDuplicated_01, 
	stOuterBarcodeDuplicate:= stOuterBarcodeDuplicate_01, 
	stOuterDuplicatedPackCodesFound:= stOuterDuplicatedPackCodesFound_01, 
	stCaseRejectReasons:= stCaseRejectReasons_01, 
	stCACData:= stCACData_01, 
	bDone=> , 
	bBusy=> , 
	bCACValid=> , 
	sRejectCode=> , 
	bIsDuplicateOuters=> bIsDuplicateOuter, 
	bIsDuplicatePacks=> bIsDuplicatePacks, 
	bReadyToValidate=> , 
	stUpdateCACData=> stUpdateCACData_01
);

	
AssertEquals_BOOL( Expected	:= TRUE,
			 	   Actual	:= bIsDuplicateOuter, 
			 	   Message	:= 'Duplicated Outer barcode not found');
						

TEST_FINISHED();]]></ST>
      </Implementation>
    </Method>
    <Method Name="main02_bIsDuplicatePackTRUEonPackBarcodeDuplicate" Id="{acfaf42b-256c-4b55-8e7a-ce9c9bdbdfa3}" FolderPath="Main\">
      <Declaration><![CDATA[METHOD INTERNAL main02_bIsDuplicatePackTRUEonPackBarcodeDuplicate
VAR
	fbCase					: FB_CASE_DuplicatCheck;
	bIsDuplicateOuter		: BOOL;
	bIsDuplicatePacks		: BOOL;
	

	
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[
//Data initialization
TestInit(stCACData:= stCACData_01, stProductInstruction:= stProductInstruction_01);

//Change some data for test scenario below
stCACData_01.Outer[9].PackCode[2] := stCACData_01.Outer[15].PackCode[5];

	
TcUnit.TEST('main02_bIsDuplicatePackTRUEonPackBarcodeDuplicate');

fbCase(
	bExecute:= TRUE, 
	stProductInstruction:= stProductInstruction_01, 
	stPackCodesDuplicated:= stPackCodesDuplicated_01, 
	stOuterBarcodeDuplicate:= stOuterBarcodeDuplicate_01, 
	stOuterDuplicatedPackCodesFound:= stOuterDuplicatedPackCodesFound_01, 
	stCaseRejectReasons:= stCaseRejectReasons_01, 
	stCACData:= stCACData_01, 
	bDone=> , 
	bBusy=> , 
	bCACValid=> , 
	sRejectCode=> , 
	bIsDuplicateOuters=> bIsDuplicateOuter, 
	bIsDuplicatePacks=> bIsDuplicatePacks, 
	bReadyToValidate=> , 
	stUpdateCACData=> stUpdateCACData_01
);

	
AssertEquals_BOOL( Expected	:= TRUE,
			 	   Actual	:= bIsDuplicatePacks, 
			 	   Message	:= 'Duplicated Pack barcode not found');
						

TEST_FINISHED();]]></ST>
      </Implementation>
    </Method>
    <Method Name="main03_OuterRejectIDChangedWhenOuterDuplicate" Id="{0d978ba3-ba7d-422e-b70f-991d7b014657}" FolderPath="Main\">
      <Declaration><![CDATA[METHOD INTERNAL main03_OuterRejectIDChangedWhenOuterDuplicate
VAR
	fbCase					: FB_CASE_DuplicatCheck;
	bIsDuplicateOuter		: BOOL;
	bIsDuplicatePacks		: BOOL;
	

	
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[
//Data initialization
TestInit(stCACData:= stCACData_01, stProductInstruction:= stProductInstruction_01);

//Change some data for test scenario below
stCACData_01.Outer[2].Barcode := stCACData_01.Outer[49].Barcode;

	
TcUnit.TEST('main03_OuterRejectIDChangedWhenOuterDuplicate');

fbCase(
	bExecute:= TRUE, 
	stProductInstruction:= stProductInstruction_01, 
	stPackCodesDuplicated:= stRejectReasonForOuters_01.stOuterDuplicatedPackCodesFound, 
	stOuterBarcodeDuplicate:= stRejectReasonForOuters_01.stOuterBarcodeDuplicate, 
	stOuterDuplicatedPackCodesFound:= stRejectReasonForOuters_01.stOuterDuplicatedPackCodesFound, 
	stCaseRejectReasons:= stCaseRejectReasons_01, 
	stCACData:= stCACData_01, 
	bDone=> , 
	bBusy=> , 
	bCACValid=> , 
	sRejectCode=> , 
	bIsDuplicateOuters=> bIsDuplicateOuter, 
	bIsDuplicatePacks=> bIsDuplicatePacks, 
	bReadyToValidate=> , 
	stUpdateCACData=> stUpdateCACData_01
);

	
AssertEquals_UINT(Expected := 206,
                  Actual := stCACData_01.Outer[2].OuterRejectID,
                  Message := 'OuterRejectID not updated when duplicate outer barcode');
						

TEST_FINISHED();]]></ST>
      </Implementation>
    </Method>
    <Method Name="TestInit" Id="{52554f64-7b81-4605-b395-1bdb3c9881b5}">
      <Declaration><![CDATA[METHOD PRIVATE TestInit
VAR_IN_OUT
	stProductInstruction	: ST_PCM_Status;
	stCACData 				: ST_CAC_Data;
END_VAR

VAR	
	rTrigDataInit		: R_TRIG;
	bDataInit			: BOOL;
	iOuter				: INT;
	iPack				: INT;
	sPackNum			: STRING;
	sOuterNum			: STRING;
	sPackCode			: STRING;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[
stProductInstruction.nOutersPerCase		:= 50;
stProductInstruction.nPacksPerOuter 	:= 10;

	FOR iOuter := 1 TO stProductInstruction.nOutersPerCase DO
		(* Ustaw outer *)
		stCACData.Outer[iOuter].Barcode    := CONCAT('OUTER', INT_TO_STRING(iOuter));
		stCACData.Outer[iOuter].OuterCodeStatus := 5;
		
		FOR iPack := 1 TO stProductInstruction.nPacksPerOuter DO
			(* Pack number z zerami *)
			sPackNum := CONCAT('0', INT_TO_STRING(iPack));  (* dla 1-9: '01'-'09' *)
			IF iPack = 10 THEN
				sPackNum := '10';
			END_IF;
			
			(* Outer number z zerami dla 1-9 *)
			sOuterNum := CONCAT('0', INT_TO_STRING(iOuter));
			IF iOuter >= 10 THEN
				sOuterNum := INT_TO_STRING(iOuter);
			END_IF;
			
			(* Sklej pack code *)
			sPackCode := CONCAT(CONCAT('PACK', sPackNum), CONCAT('OUTER', sOuterNum));
			
			(* Przypisz *)
			stCACData.Outer[iOuter].PackCode[iPack]			:= sPackCode;
			stCACData.Outer[iOuter].PackCodeStatus[iPack]	:= 5;
			stCACData.Outer[iOuter].PackRejectID[iPack]		:= 0;
			
		END_FOR;
	END_FOR;	
]]></ST>
      </Implementation>
    </Method>
  </POU>
</TcPlcObject>